--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=Actividad3AndrewLiconaSpringboot
+spring.thymeleaf.cache=false
+index.mensaje=Dato ubicado en application.properties
+
+# CAMBIAR EL PUERTO DEL SERVIDOR
+server.port=8080
+
+# QUITAR EL BANNER Y LOGO DE SPRING DEL LOG
+spring.main.banner-mode=off
+
+# ACTUALIZAR AUTOMÁTICAMENTE CUANDO GUARDEMOS LOS CAMBIOS
+spring.thymeleaf.cache=false
+
+# PARÁMETROS DE CONEXIÓN A LA BD
+spring.datasource.url=jdbc:mysql://localhost:3306/ejercicio8?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Dialecto para MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Esto es para poder ver en el log del SQL generado en cada operación
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Para actualizar las tablas automáticamente durante el desarrollo
+spring.jpa.hibernate.ddl-auto=update
